fix single confirmation divs on IE, Refs #341

--- a/ui/static/ie.css
+++ b/ui/static/ie.css
@@ -11,8 +11,9 @@ div.machine div.actions a {
 }
 
 div.machine div.actions {
-    right: -183px;
+    right: 0px;
     width: 120px;
+    left: 530px;
 }
 
 div.machine {
@@ -128,7 +129,12 @@ div.image {
 }
 
 div.confirm_single {
-    margin-right: -73px;
+    margin-right: -66px;
+    position: relative;
+}
+
+div.destroy div.confirm_single {
+    width: 150px;
 }
 
 div.action_error {
@@ -180,7 +186,7 @@ div.single-actions {
 
 .single div.destroy div.confirm_single {
     margin: 0;
-    margin-right: -19px;
+    margin-right: -60px;
     margin-top: -18px;
 }
 
